<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7"
    android:orientation="vertical"
    tools:context=".Ciudades">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_margin="20dp"
        android:background="#00FFFFFF"
        android:text="@string/text_bienvenida"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btLaPaz"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_ciudad"
        android:textStyle="bold"
        tools:text="@string/texto_boton_ciudad" />

    <Button
        android:id="@+id/btCbb"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_ciudad2"
        android:textStyle="bold"
        tools:text="@string/texto_boton_ciudad2" />
</LinearLayout>